--- a/source/onnx-metadata.json
+++ b/source/onnx-metadata.json
@@ -17898,7 +17898,7 @@
         "name": "storage_order",
         "type": "int64",
         "required": false,
-        "description": "The storage order of the tensor. 0 is row major, and 1 is column major."
+        "description": "The storage order of the tensor. 0 is row major, and 1 is column major. This attribute is used only to convert an n-tuple index value into a single integer value for producing the second output. "
       },
       {
         "name": "strides",
