--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
             { "ext": "mnn",         "name": "MNN Model"                },
             { "ext": "model",       "name": "Model"                    },
             { "ext": "nb",          "name": "Paddle Lite Model"        },
+            { "ext": "ngf",         "name": "ONNX Model"               },
             { "ext": "nn",          "name": "Barracuda Model"          },
             { "ext": "nnp",         "name": "Neural Network Libraries" },
             { "ext": "om",          "name": "DaVinci OM Model"         },
