--- a/source/onnx-metadata.json
+++ b/source/onnx-metadata.json
@@ -33764,6 +33764,20 @@
           "seq(tensor(complex128))"
         ]
       }
+    ],
+    "examples": [
+      {
+        "summary": "nokeepdims",
+        "code": "data = np.arange(18).reshape((3, 6)).astype(np.float32)\n\nnode = onnx.helper.make_node(\n    \"SplitToSequence\",\n    [\"data\"],\n    [\"seq\"],\n    axis=1,\n    keepdims=0,\n)\n\nexpected_outputs = [list(data[:, i] for i in range(data.shape[1]))]\n\nexpect(\n    node,\n    inputs=[data],\n    outputs=expected_outputs,\n    name=\"test_split_to_sequence_nokeepdims\",\n)"
+      },
+      {
+        "summary": "with_split_1",
+        "code": "data = np.arange(18).reshape((3, 6)).astype(np.float32)\nsplit = np.array(2, dtype=np.int64)\n\nnode = onnx.helper.make_node(\n    \"SplitToSequence\", [\"data\", \"split\"], [\"seq\"], axis=1\n)\n\nexpected_outputs = [\n    [\n        np.array([[0.0, 1.0], [6.0, 7.0], [12.0, 13.0]], dtype=np.float32),\n        np.array([[2.0, 3.0], [8.0, 9.0], [14.0, 15.0]], dtype=np.float32),\n        np.array([[4.0, 5.0], [10.0, 11.0], [16.0, 17.0]], dtype=np.float32),\n    ]\n]\n\nexpect(\n    node,\n    inputs=[data, split],\n    outputs=expected_outputs,\n    name=\"test_split_to_sequence_1\",\n)"
+      },
+      {
+        "summary": "with_split_2",
+        "code": "data = np.arange(18).reshape((3, 6)).astype(np.float32)\nsplit = np.array([1, 2], dtype=np.int64)\n\nnode = onnx.helper.make_node(\n    \"SplitToSequence\", [\"data\", \"split\"], [\"seq\"], axis=0\n)\n\nexpected_outputs = [\n    [\n        data[:1],\n        data[1:],\n    ]\n]\n\nexpect(\n    node,\n    inputs=[data, split],\n    outputs=expected_outputs,\n    name=\"test_split_to_sequence_2\",\n)"
+      }
     ]
   },
   {
