--- a/source/onnx-metadata.json
+++ b/source/onnx-metadata.json
@@ -8653,6 +8653,14 @@
       {
         "summary": "equal_broadcast",
         "code": "node = onnx.helper.make_node(\n    \"Equal\",\n    inputs=[\"x\", \"y\"],\n    outputs=[\"z\"],\n)\n\nx = (np.random.randn(3, 4, 5) * 10).astype(np.int32)\ny = (np.random.randn(5) * 10).astype(np.int32)\nz = np.equal(x, y)\nexpect(node, inputs=[x, y], outputs=[z], name=\"test_equal_bcast\")"
+      },
+      {
+        "summary": "equal_string",
+        "code": "node = onnx.helper.make_node(\n    \"Equal\",\n    inputs=[\"x\", \"y\"],\n    outputs=[\"z\"],\n)\nx = np.array([\"string1\", \"string2\"], dtype=np.dtype(object))\ny = np.array([\"string1\", \"string3\"], dtype=np.dtype(object))\nz = np.equal(x, y)\nexpect(node, inputs=[x, y], outputs=[z], name=\"test_equal_string\")"
+      },
+      {
+        "summary": "equal_string_broadcast",
+        "code": "node = onnx.helper.make_node(\n    \"Equal\",\n    inputs=[\"x\", \"y\"],\n    outputs=[\"z\"],\n)\nx = np.array([\"string1\", \"string2\"], dtype=np.dtype(object))\ny = np.array([\"string1\"], dtype=np.dtype(object))\nz = np.equal(x, y)\nexpect(node, inputs=[x, y], outputs=[z], name=\"test_equal_string_broadcast\")"
       }
     ]
   },
@@ -8711,6 +8719,14 @@
       {
         "summary": "equal_broadcast",
         "code": "node = onnx.helper.make_node(\n    \"Equal\",\n    inputs=[\"x\", \"y\"],\n    outputs=[\"z\"],\n)\n\nx = (np.random.randn(3, 4, 5) * 10).astype(np.int32)\ny = (np.random.randn(5) * 10).astype(np.int32)\nz = np.equal(x, y)\nexpect(node, inputs=[x, y], outputs=[z], name=\"test_equal_bcast\")"
+      },
+      {
+        "summary": "equal_string",
+        "code": "node = onnx.helper.make_node(\n    \"Equal\",\n    inputs=[\"x\", \"y\"],\n    outputs=[\"z\"],\n)\nx = np.array([\"string1\", \"string2\"], dtype=np.dtype(object))\ny = np.array([\"string1\", \"string3\"], dtype=np.dtype(object))\nz = np.equal(x, y)\nexpect(node, inputs=[x, y], outputs=[z], name=\"test_equal_string\")"
+      },
+      {
+        "summary": "equal_string_broadcast",
+        "code": "node = onnx.helper.make_node(\n    \"Equal\",\n    inputs=[\"x\", \"y\"],\n    outputs=[\"z\"],\n)\nx = np.array([\"string1\", \"string2\"], dtype=np.dtype(object))\ny = np.array([\"string1\"], dtype=np.dtype(object))\nz = np.equal(x, y)\nexpect(node, inputs=[x, y], outputs=[z], name=\"test_equal_string_broadcast\")"
       }
     ]
   },
@@ -8778,6 +8794,14 @@
       {
         "summary": "equal_broadcast",
         "code": "node = onnx.helper.make_node(\n    \"Equal\",\n    inputs=[\"x\", \"y\"],\n    outputs=[\"z\"],\n)\n\nx = (np.random.randn(3, 4, 5) * 10).astype(np.int32)\ny = (np.random.randn(5) * 10).astype(np.int32)\nz = np.equal(x, y)\nexpect(node, inputs=[x, y], outputs=[z], name=\"test_equal_bcast\")"
+      },
+      {
+        "summary": "equal_string",
+        "code": "node = onnx.helper.make_node(\n    \"Equal\",\n    inputs=[\"x\", \"y\"],\n    outputs=[\"z\"],\n)\nx = np.array([\"string1\", \"string2\"], dtype=np.dtype(object))\ny = np.array([\"string1\", \"string3\"], dtype=np.dtype(object))\nz = np.equal(x, y)\nexpect(node, inputs=[x, y], outputs=[z], name=\"test_equal_string\")"
+      },
+      {
+        "summary": "equal_string_broadcast",
+        "code": "node = onnx.helper.make_node(\n    \"Equal\",\n    inputs=[\"x\", \"y\"],\n    outputs=[\"z\"],\n)\nx = np.array([\"string1\", \"string2\"], dtype=np.dtype(object))\ny = np.array([\"string1\"], dtype=np.dtype(object))\nz = np.equal(x, y)\nexpect(node, inputs=[x, y], outputs=[z], name=\"test_equal_string_broadcast\")"
       }
     ]
   },
@@ -8846,6 +8870,91 @@
       {
         "summary": "equal_broadcast",
         "code": "node = onnx.helper.make_node(\n    \"Equal\",\n    inputs=[\"x\", \"y\"],\n    outputs=[\"z\"],\n)\n\nx = (np.random.randn(3, 4, 5) * 10).astype(np.int32)\ny = (np.random.randn(5) * 10).astype(np.int32)\nz = np.equal(x, y)\nexpect(node, inputs=[x, y], outputs=[z], name=\"test_equal_bcast\")"
+      },
+      {
+        "summary": "equal_string",
+        "code": "node = onnx.helper.make_node(\n    \"Equal\",\n    inputs=[\"x\", \"y\"],\n    outputs=[\"z\"],\n)\nx = np.array([\"string1\", \"string2\"], dtype=np.dtype(object))\ny = np.array([\"string1\", \"string3\"], dtype=np.dtype(object))\nz = np.equal(x, y)\nexpect(node, inputs=[x, y], outputs=[z], name=\"test_equal_string\")"
+      },
+      {
+        "summary": "equal_string_broadcast",
+        "code": "node = onnx.helper.make_node(\n    \"Equal\",\n    inputs=[\"x\", \"y\"],\n    outputs=[\"z\"],\n)\nx = np.array([\"string1\", \"string2\"], dtype=np.dtype(object))\ny = np.array([\"string1\"], dtype=np.dtype(object))\nz = np.equal(x, y)\nexpect(node, inputs=[x, y], outputs=[z], name=\"test_equal_string_broadcast\")"
+      }
+    ]
+  },
+  {
+    "name": "Equal",
+    "module": "ai.onnx",
+    "version": 19,
+    "support_level": "common",
+    "description": "Returns the tensor resulted from performing the `equal` logical operation\nelementwise on the input tensors `A` and `B` (with Numpy-style broadcasting support).\n\nThis operator supports **multidirectional (i.e., Numpy-style) broadcasting**; for more details please check [the doc](https://github.com/onnx/onnx/blob/master/docs/Broadcasting.md).\n",
+    "inputs": [
+      {
+        "name": "A",
+        "type": "T",
+        "description": "First input operand for the logical operator."
+      },
+      {
+        "name": "B",
+        "type": "T",
+        "description": "Second input operand for the logical operator."
+      }
+    ],
+    "min_input": 2,
+    "max_input": 2,
+    "outputs": [
+      {
+        "name": "C",
+        "type": "T1",
+        "description": "Result tensor."
+      }
+    ],
+    "min_output": 1,
+    "max_output": 1,
+    "type_constraints": [
+      {
+        "description": "Constrain input types to all (non-complex) tensors.",
+        "type_param_str": "T",
+        "allowed_type_strs": [
+          "tensor(bool)",
+          "tensor(uint8)",
+          "tensor(uint16)",
+          "tensor(uint32)",
+          "tensor(uint64)",
+          "tensor(int8)",
+          "tensor(int16)",
+          "tensor(int32)",
+          "tensor(int64)",
+          "tensor(float16)",
+          "tensor(float)",
+          "tensor(double)",
+          "tensor(bfloat16)",
+          "tensor(string)"
+        ]
+      },
+      {
+        "description": "Constrain output to boolean tensor.",
+        "type_param_str": "T1",
+        "allowed_type_strs": [
+          "tensor(bool)"
+        ]
+      }
+    ],
+    "examples": [
+      {
+        "summary": "equal",
+        "code": "node = onnx.helper.make_node(\n    \"Equal\",\n    inputs=[\"x\", \"y\"],\n    outputs=[\"z\"],\n)\n\nx = (np.random.randn(3, 4, 5) * 10).astype(np.int32)\ny = (np.random.randn(3, 4, 5) * 10).astype(np.int32)\nz = np.equal(x, y)\nexpect(node, inputs=[x, y], outputs=[z], name=\"test_equal\")"
+      },
+      {
+        "summary": "equal_broadcast",
+        "code": "node = onnx.helper.make_node(\n    \"Equal\",\n    inputs=[\"x\", \"y\"],\n    outputs=[\"z\"],\n)\n\nx = (np.random.randn(3, 4, 5) * 10).astype(np.int32)\ny = (np.random.randn(5) * 10).astype(np.int32)\nz = np.equal(x, y)\nexpect(node, inputs=[x, y], outputs=[z], name=\"test_equal_bcast\")"
+      },
+      {
+        "summary": "equal_string",
+        "code": "node = onnx.helper.make_node(\n    \"Equal\",\n    inputs=[\"x\", \"y\"],\n    outputs=[\"z\"],\n)\nx = np.array([\"string1\", \"string2\"], dtype=np.dtype(object))\ny = np.array([\"string1\", \"string3\"], dtype=np.dtype(object))\nz = np.equal(x, y)\nexpect(node, inputs=[x, y], outputs=[z], name=\"test_equal_string\")"
+      },
+      {
+        "summary": "equal_string_broadcast",
+        "code": "node = onnx.helper.make_node(\n    \"Equal\",\n    inputs=[\"x\", \"y\"],\n    outputs=[\"z\"],\n)\nx = np.array([\"string1\", \"string2\"], dtype=np.dtype(object))\ny = np.array([\"string1\"], dtype=np.dtype(object))\nz = np.equal(x, y)\nexpect(node, inputs=[x, y], outputs=[z], name=\"test_equal_string_broadcast\")"
       }
     ]
   },
