--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,10 +33,10 @@ jobs:
           python-version: '3.10'
 
       - name: Install npm packages 
-        run: make install
+        run: npm install
 
       - name: Lint
-        run: make lint
+        run: npm run lint
 
       - name: Publish Electron
         shell: bash
